# progetto_cosimone_2

./: .gitignore  CMakeLists.txt  Manager.cpp  Manager.hpp  Negozio.cpp  Negozio.hpp  Potenziamenti.cpp  Potenziamenti.hpp  README.md  Salvataggio.cpp  Salvataggio.hpp  main  main.cpp  manager.cpp  manager.hpp  mapList.cpp  mapList.hpp  negozio.cpp  negozio.hpp  nemici.cpp  nemici.hpp  player.cpp  player.hpp  potenziamenti.cpp  potenziamenti.hpp  protagonista.cpp  protagonista.hpp  salvataggio.cpp  salvataggio.hpp  strutture.h
